--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,6 @@ django-translated-fields==0.7.2
 django-widget-tweaks==1.4.3
 gunicorn==19.9.0
 jsmin==2.2.2
-psycopg2==2.7.7
+psycopg2-binary==2.7.7
 pytz==2018.7
 whitenoise==4.1.2
