--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 dj-database-url==0.5.0
-django>=2.1.6
+Django>=2.1.7
 django-betterforms==1.2
 django-countries==5.3.2
 django-filter==2.0.0
@@ -12,3 +12,6 @@ jsmin==2.2.2
 psycopg2-binary==2.7.7
 pytz==2018.7
 whitenoise==4.1.2
+Babel>=2.6.0
+django-phonenumber-field>=2.3.1
+phonenumberslite>=8.10.9
