--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,4 @@ Babel>=2.6.0
 django-phonenumber-field>=2.3.1
 phonenumberslite>=8.10.9
 django-crispy-forms>=1.7.2
-django-formtools>=2.1
+django-extra-views>=0.12.0
