update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 ulm_website/secret_settings.py
 ulm_website/settings/development.py
+salon-ulm-blois/settings/development.py
+salon-ulm-blois/settings/production.py
+
 staticfiles/*
 
 # Byte-compiled / optimized / DLL files
