--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
-dj-database-url==0.5.0
-Django>=2.1.7
-django-betterforms==1.2
-django-countries==5.3.2
-django-filter==2.0.0
-django-heroku==0.3.1
-django-tinymce4-lite==1.7.4
-django-translated-fields==0.7.2
-django-widget-tweaks==1.4.3
-gunicorn==19.9.0
-jsmin==2.2.2
-psycopg2-binary==2.7.7
-pytz==2018.7
-whitenoise==4.1.2
-Babel>=2.6.0
-django-phonenumber-field>=2.3.1
-phonenumberslite>=8.10.9
+Babel>=2.7.0
+dj-database-url>=0.5.0
+Django>=2.2.2
+django-betterforms>=1.2
+django-countries>=5.3.3
 django-crispy-forms>=1.7.2
 django-extra-views>=0.12.0
+django-filter>=2.1.0
+django-formtools>=2.1
+django-heroku>=0.3.1
+django-phonenumber-field>=3.0.1
+django-tinymce4-lite>=1.7.5
+django-translated-fields>=0.7.3
+django-widget-tweaks>=1.4.5
+gunicorn>=19.9.0
+jsmin>=2.2.2
+phonenumberslite>=8.10.13
+psycopg2>=2.8.2
+pytz>=2019.1
+six>=1.12.0
+sqlparse>=0.3.0
+whitenoise>=4.1.2
