--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,8 @@ django-widget-tweaks>=1.4.5
 gunicorn>=19.9.0
 jsmin>=2.2.2
 phonenumberslite>=8.10.13
-psycopg2>=2.8.2 --no-binary psycopg2
+# to remove in production, psycopg2 require c compiler and other dependency to build
+psycopg2-binary>=2.8.2
 pytz>=2019.1
 six>=1.12.0
 sqlparse>=0.3.0
