--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
   - export DJANGO_SETTINGS_MODULE=salon-ulm-blois.settings.travis
 
 install:
-  - pip install -r django==$DJANGO --quiet
+  - pip install django==$DJANGO --quiet
   - pip install psycopg2 --quiet
   - pip install -r requirements.txt
 
