--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,6 @@ before_script:
   - psql -c "CREATE DATABASE travisci;" -U postgres
 
 script:
+  - python manage.py collectstatic
   - python manage.py migrate
   - python manage.py test
