update git ignore and heroku profile

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ulm_website/secret_settings.py
 ulm_website/settings/development.py
 salon-ulm-blois/settings/development.py
-
+bin/*
 staticfiles/*
 
 # Byte-compiled / optimized / DLL files
