--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,16 @@ install:
   - pip install django==$DJANGO --quiet
   - pip install psycopg2 --quiet
   - pip install -r requirements.txt
+  - pip install coveralls
 
 before_script:
   - psql -c "CREATE DATABASE travisci;" -U postgres
 
 script:
   - python manage.py collectstatic
+  - coverage run manage.py test
   # - python manage.py migrate
-  - python manage.py test
+  # - python manage.py test
+
+after_success:
+  coveralls
