--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_script:
 
 script:
   - python manage.py collectstatic
-  - coverage run manage.py test
+  - coverage run manage.py test --parallel
   # - python manage.py migrate
   # - python manage.py test
 
