--- a/requirements.txt
+++ b/requirements.txt
@@ -21,4 +21,5 @@ pytz>=2019.1
 six>=1.12.0
 sqlparse>=0.3.0
 whitenoise>=4.1.2
+django-import-export>=1.2.0
 git+git://github.com/UlmBlois/Aircraft-Registration.git
