--- a/requirements.txt
+++ b/requirements.txt
@@ -22,4 +22,5 @@ six>=1.12.0
 sqlparse>=0.3.0
 whitenoise>=4.1.2
 django-import-export>=1.2.0
-git+git://github.com/UlmBlois/Aircraft-Registration.git
+# git+git://github.com/UlmBlois/Aircraft-Registration.git
+git+git://github.com/UlmBlois/django-aircraft-registration-field.git
