--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_install:
 install:
   - pip install django==$DJANGO --quiet
   - pip install psycopg2 --quiet
+  - pip install freezegun
   - pip install -r requirements.txt
   - pip install coveralls
 
