--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-ulm_website/secret_settings.py
-ulm_website/settings/development.py
 salon_ulm_blois/settings/development.py
 bin/*
 staticfiles/*
+log/*
 chunk_detail.pdf
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
