--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Babel>=2.7.0
 dj-database-url>=0.5.0
-Django>=2.2.2
+Django>=2.2.2,<3.0
 django-betterforms>=1.2
 django-countries>=5.3.3
 django-crispy-forms>=1.7.2
@@ -22,5 +22,6 @@ six>=1.12.0
 sqlparse>=0.3.0
 whitenoise>=4.1.2
 django-import-export>=1.2.0
+freezegun>=0.3.14
 git+git://github.com/UlmBlois/Aircraft-Registration.git
 git+git://github.com/UlmBlois/django-aircraft-registration-field.git
